@@ -6,6 +6,7 @@
 	"author": "PennyJim",
 	"factorio_version": "1.1",
 	"dependencies": [
-		"base >= 1.1"
+		"base >= 1.1",
+		"? better-chat >= 0.3"
 	]
 }
