@@ -7,6 +7,7 @@ Date: ????
     - Added compatibility for Ultracube
     - Added compatibility for Science Packs Galore (as well as Forked)
     - Added compatibility for MoreSciencePacks-for1_1
+    - Added compatibility for my other mod better-chat (the compatibility message prints using the interface)
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.4
 Date: 2024-05-28
